chore(deps): bump unirest-version from 4.0.0-RC7 to 4.0.0-RC9 (#501)
* chore(deps): bump unirest-version from 4.0.0-RC7 to 4.0.0-RC9

Bumps `unirest-version` from 4.0.0-RC7 to 4.0.0-RC9.

Updates `com.konghq:unirest-java-core` from 4.0.0-RC7 to 4.0.0-RC9

Updates `com.konghq:unirest-objectmapper-jackson` from 4.0.0-RC7 to 4.0.0-RC9

Updates `com.konghq:unirest-mocks` from 4.0.0-RC7 to 4.0.0-RC9
- [Release notes](https://github.com/Kong/unirest-java/releases)
- [Changelog](https://github.com/Kong/unirest-java/blob/main/CHANGELOG.md)
- [Commits](https://github.com/Kong/unirest-java/compare/v4.0.0-RC7...v4.0.0-RC9)

---
updated-dependencies:
- dependency-name: com.konghq:unirest-java-core
  dependency-type: direct:production
  update-type: version-update:semver-patch
- dependency-name: com.konghq:unirest-objectmapper-jackson
  dependency-type: direct:production
  update-type: version-update:semver-patch
- dependency-name: com.konghq:unirest-mocks
  dependency-type: direct:production
  update-type: version-update:semver-patch
...

Signed-off-by: dependabot[bot] <support@github.com>

* Use Jackson BOM

---------

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
Co-authored-by: Thomas Couchoud <thomas.couchoud@gmail.com>